[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Player/Mandragora.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Audio/Powerups/PowerupOne.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Powerups/Powerup2.wav" type="AudioStream" id=4]

[node name="Player" type="Area2D" groups=["Player"]]
script = ExtResource( 2 )
fire_rate = 10

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -1.81899e-12 )
rotation = 1.5708
polygon = PoolVector2Array( 0.999895, -29, 6.00001, 2.99998, 19, -4.00007, 13.0001, 21, -11.9999, 21, -19, -2.99993, -5.99999, 3.00002 )
one_way_collision_margin = 0.0

[node name="MachineGun" type="Node2D" parent="."]

[node name="PointOne" type="Position2D" parent="MachineGun"]
position = Vector2( -8, -8 )

[node name="PointTwo" type="Position2D" parent="MachineGun"]
position = Vector2( -8, 8 )

[node name="PowerupTwo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PowerupOne" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 2, 0 )
polygon = PoolVector2Array( 28, -1, 28, 2, -5, 6, -1, 16, -13, 15, -18, 8, -17, -6, -15, -11, -2, -14, -5, -6 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
